compressed png images and made adjustments to code to fix minor shifts

--- a/default.css
+++ b/default.css
@@ -67,7 +67,7 @@ nav li a {
 	color: #414f6b;
 }
 .hero-image {
-    background-image: url("/public/i/background11.png");
+    background-image: url("/public/compressed/background11-min.png");
     height: 100vh;
     width: 100vw;
     margin-left: calc(-50vw + 50%);
@@ -95,7 +95,7 @@ nav li a {
 	color: #414f6b;
 }
 .hero-image1 {
-    background-image: url("/public/i/background2.png");
+    background-image: url("/public/compressed/background2-min.png");
     height: 100vh;
     width: 100vw;
     margin-left: calc(-50vw + 50%);
@@ -182,7 +182,7 @@ nav li a {
 	z-index: 2;
 	width: 100vw;
 	background-color: rgb(65,79,107);
-	top: 1790px;
+	top: 1700px;
 }
 #tabs div{
 	max-width: 1000px;
@@ -208,9 +208,9 @@ nav li a {
 	text-decoration-line: underline;
 }
 .hero-image2 {
-    background-image: url("/public/i/background3.png");
+    background-image: url("/public/compressed/background3-min.png");
 
-    height: 100vh;
+    height: 80vh;
     width: 100vw;
     margin-left: calc(-50vw + 50%);
 
@@ -220,8 +220,6 @@ nav li a {
     background-size: cover;
     background-position: center;
     position: relative;
-
-    height: 520px;
 }
 .hero-text2 {
 	background-color: rgba(255, 255, 255, 0.5);
@@ -333,7 +331,7 @@ footer #copyright {
 		background-color: rgba(255, 255, 255, 0.7);
 	}
 	#tabs {
-		top: 1760px;
+		top: 1700px;
 	}
 	.hero-text2 {
 		margin: 0 auto;
